<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">jagoHTMLl new</string>
    <string name="kuasai_dasar_web_dengan_cepat">Kuasai Dasar Web dengan Cepat</string>
    <string name="jagohtml">JagoHTML</string>
    <string name="mulai_ngoding">Mulai Ngoding</string>
    <string name="dashboard">Dashboard</string>
    <string name="selamat_ngoding_fikri">Selamat Ngoding, Fikri!</string>
    <string name="progress_belajar_keseluruhan">Progress Belajar Keseluruhan</string>
    <string name="_60">60%</string>
    <string name="menu_materi">Menu Materi</string>
    <string name="modul_1_dasar_tag_nmodul_2_struktur_dokumen">Modul 1: Dasar Tag\nModul 2: Struktur Dokumen</string>
    <string name="lanjutkan">Lanjutkan</string>
    <string name="menu_kuis">Menu Kuis</string>
    <string name="ujian_modul_1_n90_lulus">Ujian Modul 1\n90% - Lulus!</string>
    <string name="riwayat_skor_mingguan">Riwayat Skor Mingguan</string>
    <string name="todo">TODO</string>
    <string name="todo_">TODO</string>
    <string name="TODO_">TODO</string>
    <string name="ICON">TODO</string>
    <string name="mingguan">Mingguan</string>
    <string name="semua_waktu">Semua Waktu</string>
    <string name="skor_anda_8_720_poin">Skor Anda: 8,720 Poin</string>
    <string name="terus_semangat_tingkatkan_poinmu">Terus semangat! Tingkatkan poinmu!</string>
    <string name="peringkat_teratas_minggu_ini">Peringkat Teratas Minggu Ini</string>
    <string name="icon_mendali">TODO</string>
    <string name="fikri_m">Fikri M.</string>
    <string name="_12_500_poin">12,500 Poin</string>
    <string name="icon_mendali_silver">TODO</string>
    <string name="siti_n">Siti N.</string>
    <string name="_11_890_poin">11,890 Poin</string>
    <string name="icon_bronze">TODO</string>
    <string name="budi_s">Budi S.</string>
    <string name="_10_240_poin">10,240 Poin</string>
    <string name="icon_copper_medali">TODO</string>
    <string name="joko_h">Joko H.</string>
    <string name="_9_800_poin">9,800 Poin</string>
    <string name="perkembangan_skor_saya">Perkembangan Skor Saya</string>
    <string name="icon_grap">TODO</string>
    <string name="tandai_selesai">Tandai Selesai</string>
    <string name="struktur_dasar_dokumen">Struktur Dasar Dokumen</string>
    <string name="html_body_body_html"><![CDATA[<html> <body> ... </body> </html>]]></string>
    <string name="materi_selanjutnya">Materi Selanjutnya</string>
    <string name="ICON_COURSE">TODO</string>
    <string name="ICIN_PERSON">TODO</string>
    <string name="modul_1_pengenalan_html">Modul 1: Pengenalan HTML</string>
    <string name="materi">Materi</string>
    <string name="apa_itu_html">Apa itu HTML?</string>
    <string name="html_adalah_singkatan_dari_hyper_text_markup_language_sebuah_bahasa_markup_setandar_yang_digunakan_untuk_membuat_dan_menyusun_konten_halaman_web">HTML adalah singkatan dari hyper text markup language, sebuah bahasa markup standar yang digunakan untuk membuat dan menyusun konten halaman web.</string>
    <string name="STRUKTUR">Struktur Dasar Dokumen</string>
    <string name="p_ini_adalah_sebuah_paragraf_p"><![CDATA[<p> Ini adalah sebuah paragraf </p>]]></string>
    <string name="icon_home">TODO</string>
    <string name="icon_folder">TODO</string>
    <string name="icon_back">TODO</string>
    <string name="_00_25">00:25</string>
    <string name="pertanyaan_3_10">Pertanyaan 3/10</string>
    <string name="img_src_n_img_src_alt_deskripsi_gambar" tools:ignore="StringEscaping"><![CDATA[<img src=\\\'__________'>\n<img src='______' alt='Deskripsi gambar'>]]></string>
    <string name="atribut_apa_yang_benar_untuk_mengisi_sumber_gambar_isi_di_kolom_tersedia">Atribut apa yang benar untuk mengisi sumber gambar? (isi di kolom tersedia)</string>
    <string name="submit">Submit</string>
    <string name="kesempatan_1">Kesempatan (1)</string>
    <string name="hint_1">Hint (1)</string>
    <string name="timer_00_25">00_25</string>
    <string name="jam">00:25</string>
    <string name="ic_profile">ic_profile</string>
    <string name="ic_courses">ic_courses</string>
    <string name="label_materi">Materi</string>
    <string name="label_kuis">Kuis</string>
    <string name="imag">TODO</string>
    <string name="siti_n_name">Siti N.</string>
    <string name="src">src</string>
    <string name="leaderboard_mingguan">Leaderboard Mingguan</string>
</resources>