<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#030321">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="18dp">

            <!-- Judul -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/leaderboard_mingguan"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:textStyle="bold"
                android:paddingBottom="15dp" />

            <!-- Tab Mingguan & Semua Waktu -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:paddingBottom="15dp">

                <Button
                    android:id="@+id/btnWeekly"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:text="@string/mingguan"
                    android:textAllCaps="false"
                    android:background="@drawable/bg_tab_active"
                    android:textColor="#FFFEFE" />

                <Space
                    android:layout_width="10dp"
                    android:layout_height="wrap_content" />

                <Button
                    android:id="@+id/btnAllTime"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:text="@string/semua_waktu"
                    android:textAllCaps="false"
                    android:background="@drawable/bg_button"
                    android:textColor="#0B0B0B" />
            </LinearLayout>

            <!-- Card Peringkat Saya -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/bg_card_outline"
                android:padding="15dp"
                android:layout_marginBottom="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Anda Berada di Peringkat 45"
                    android:textColor="#FFFFFF"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/skor_anda_8_720_poin"
                    android:textColor="#8A98A9"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/terus_semangat_tingkatkan_poinmu"
                    android:textColor="#5DECF9"
                    android:textSize="14sp"
                    android:paddingTop="5dp" />
            </LinearLayout>

            <!-- List Top Minggu Ini -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/peringkat_teratas_minggu_ini"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                android:textSize="16sp"
                android:paddingBottom="10dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_card_dark"
                android:padding="15dp"
                android:orientation="vertical">

                <!-- 1 -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="5dp"
                    tools:ignore="ExtraText">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:contentDescription="@string/icon_mendali"
                        android:src="@drawable/ic_gold_medal" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/fikri_m"
                        android:textColor="#FFFFFF"
                        android:textSize="14sp"
                        android:paddingStart="10dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_12_500_poin"
                        android:textColor="#8A98A9"
                        android:textSize="14sp" />
                </LinearLayout>

                <!-- 2 -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:importantForAccessibility="no"
                    android:orientation="horizontal"
                    android:padding="5dp">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:contentDescription="@string/icon_mendali_silver"
                        android:src="@drawable/ic_silver_medal" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/siti_n"
                        android:textColor="#FFFFFF"
                        android:textSize="14sp"
                        android:paddingStart="10dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_11_890_poin"
                        android:textColor="#8A98A9"
                        android:textSize="14sp" />
                </LinearLayout>

                <!-- 3 -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:importantForAccessibility="no"
                    android:orientation="horizontal"
                    android:padding="5dp">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:contentDescription="@string/icon_bronze"
                        android:src="@drawable/ic_bronze_medal" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/budi_s"
                        android:textColor="#FFFFFF"
                        android:textSize="14sp"
                        android:paddingStart="10dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_10_240_poin"
                        android:textColor="#8A98A9"
                        android:textSize="14sp" />
                </LinearLayout>

                <!-- 4 -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="5dp">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:contentDescription="@string/icon_copper_medali"
                        android:src="@drawable/ic_copper_medal" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/joko_h"
                        android:textColor="#FFFFFF"
                        android:textSize="14sp"
                        android:paddingStart="10dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_9_800_poin"
                        android:textColor="#8A98A9"
                        android:textSize="14sp" />
                </LinearLayout>
            </LinearLayout>

            <!-- Grafik Placeholder -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/perkembangan_skor_saya"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                android:textSize="16sp"
                android:paddingTop="20dp"
                android:paddingBottom="10dp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:src="@drawable/ic_graph"
                android:scaleType="centerCrop"
                android:contentDescription="@string/icon_grap" />
        </LinearLayout>
    </ScrollView>

    <!-- Bottom Navigation -->
    <include layout="@layout/bottom_nav" />

</LinearLayout>
